<resources>
    <string name="app_name">EasyPark</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EasyPark</string>
    <string name="nav_header_subtitle">danieltiomelajou@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Se déconnecter</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Parking</string>
    <string name="menu_slideshow">Utilisateurs</string>
    <string name="slogan">Votre satisfaction c\'est notre priorité</string>
    <string name="start">Commencer</string>
    <string name="text_validate">Valider</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="logo">logo</string>
    <string name="nombre_de_place">Nombre de place</string>
    <string name="nom_du_parking">Nom du parking</string>
    <string name="cr_er_un_parking">Créer un parking</string>
    <string name="acceuil">Acceuil</string>
    <string name="profile">Profil</string>
    <string name="Map">Carte</string>
    <string name="creer_une_parking">Créer un parking</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="utiliser_mes_coordonn_es">utiliser mes coordonnées</string>
    <string name="nom_du_parking2">Nom du parking</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="utilisateurs">Utilisateurs</string>
    <string name="parkings">parkings</string>
    <string name="pargning_name">pargning name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="park_code">park code</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="cliquez_pour_utiliser">Cliquez pour utiliser</string>
</resources>