<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Parking.create_parking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr_er_un_parking"
            android:textColor="@color/white"
            android:layout_marginVertical="15dp"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edit_parking_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/car"
            android:hint="@string/nom_du_parking"
            android:inputType="text"


            android:autofillHints="nom du parking" />

        <EditText
            android:id="@+id/edit_parking_place"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            android:hint="@string/nombre_de_place"
            android:drawableStart="@drawable/car"


            android:layout_marginVertical="10dp"

            android:autofillHints="nombre de place" />
        <EditText
            android:id="@+id/edit_latitude"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:hint="@string/latitude"
            android:drawableStart="@drawable/location"
            android:autofillHints="latitude" />

        <EditText
            android:id="@+id/edit_longitude"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:hint="@string/longitude"
            android:drawableStart="@drawable/location"
            android:autofillHints="longitude" />

        <Button
            android:id="@+id/get_coords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rondered2"
            android:layout_marginTop="15dp"
            android:text="@string/utiliser_mes_coordonn_es"
            />
            <Button
                android:id="@+id/parking_add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_validate"
                android:background="@drawable/rondered"
                android:padding="15dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"/>
    </LinearLayout>

</ScrollView>